Search has been added.

--- a/authentication/templates/authentication/signup.html
+++ b/authentication/templates/authentication/signup.html
@@ -7,7 +7,7 @@
 {% endblock head %}
 
 {% block body %}
-  <h1 class="logo"><a href="{% url 'home' %}">Bootcamp</a></h1>
+  <h1 class="logo"><a href="{% url 'home' %}">Onlinebookshare</a></h1>
   <div class="signup">
     <h2>{% trans 'Sign up for Onlinebookshare' %}</h2>
     <form action="{% url 'signup' %}" method="post" role="form">
