--- a/core/templates/core/cover.html
+++ b/core/templates/core/cover.html
@@ -36,7 +36,7 @@
           {% endfor %}
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-default">{% trans 'Log in' %}</button>
+          <button type="submit" class="btn btn-primary btn-lg">{% trans 'Log in' %}</button>
           <a href="{% url 'signup' %}" class="btn btn-link">{% trans 'Sign up for Onlinebookshare' %}</a>
         </div>
       </form>
