--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,18 @@
                     </a>
                 </li>
               </ul>
+              {% if not hide_search %}
+                <form class="navbar-form navbar-left" role="search" action="{% url 'search' %}">
+                  <div class="input-group" style="width:210px">
+                    <input type="text" class="form-control" name="q" placeholder="Search">
+                    <span class="input-group-btn">
+                      <button type="submit" class="btn btn-default">
+                          <span class="glyphicon glyphicon-search"></span>
+                      </button>
+                    </span>
+                  </div>
+                </form>
+              {% endif %}
               <ul class="nav navbar-nav navbar-right">
                 <li>
                   <a href="{% url 'profile' user.username %}">{{ user.profile.get_screen_name }}
