--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -16,12 +16,15 @@
 
   <div class="row" style="padding-top: 4em; padding-bottom: 8em;">
     <div class="col-md-8 col-md-offset-2">
-      <h3>{% trans "Search Feed, Articles, Questions and Users" %}</h3>
+      <h3>{% trans "Search Feed, Books, Authors and Users" %}</h3>
       <form role="search" action="{% url 'search' %}" style="padding-top: 1em;">
         <div class="input-group">
           <input type="text" class="form-control input-lg" name="q" placeholder="{% trans 'Search' %}">
           <span class="input-group-btn">
-            <button type="submit" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span></button>
+            <button type="submit" class="btn btn-default btn-lg">
+                <span class="glyphicon glyphicon-search">
+                </span>
+            </button>
           </span>
         </div>
       </form>
