--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -22,8 +22,7 @@
           <input type="text" class="form-control input-lg" name="q" placeholder="{% trans 'Search' %}">
           <span class="input-group-btn">
             <button type="submit" class="btn btn-default btn-lg">
-                <span class="glyphicon glyphicon-search">
-                </span>
+                <span class="glyphicon glyphicon-search"></span>
             </button>
           </span>
         </div>
